--- a/rps/src/App.css
+++ b/rps/src/App.css
@@ -1,5 +1,7 @@
 .App {
+  width:100%;
   text-align: center;
+  font-family: Roboto; 
 }
 
 .App-logo {
@@ -19,4 +21,52 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+.Score {
+  min-height: 20vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+}
+
+.TitleScreen {
+  display: flex;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+}
+
+.TitleScreen button {
+  
+}
+
+.Player {
+ /* width: 100%;
+  min-width: 100%;
+  height: 100%;
+  
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  text-align: justify;
+  padding-top: 10em;
+  padding-bottom: 10em; */
+  
+  
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+}
+
+#playButton {  
+  background-image: url('icon.png');
+  background-size: 100% 100%;
+  background-color: #282c34;
 }
