--- a/rps/src/App.css
+++ b/rps/src/App.css
@@ -34,39 +34,72 @@
 .TitleScreen {
   display: flex;
   min-height: 100vh;
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-}
-
-.TitleScreen button {
-  
-}
-
-.Player {
- /* width: 100%;
-  min-width: 100%;
-  height: 100%;
-  
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  text-align: justify;
-  padding-top: 10em;
-  padding-bottom: 10em; */
-  
-  
-  min-height: 80vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
-
-#playButton {  
   background-image: url('icon.png');
   background-size: 100% 100%;
-  background-color: #282c34;
+  background-color: #3535ba;
+}
+
+.TitleScreen button {  
+  color: mediumBlue;
+  border-radius: .25em;
+  background-color: rgba(235,220,209, .5);
+  border: solid .10em mediumBlue;
+  padding: 1em;
+}
+
+.Game {
+  width: 100vw;
+  text-align: center;
+  background-color: mediumBlue;  
+  display: flex; 
+  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: 7vw;
+
+}
+
+.Game h1 {
+  padding: 5vh 1vw;
+  color: mediumBlue;
+  background-color: moccasin;  
+  border: 2vw solid midnightBlue;
+  border-radius: 2%;
+  min-height: 16vh;
+}
+
+.ButtonContainer {  
+  width: 94vw;
+  padding: 1vh 1vw;
+  background-color: moccasin;  
+  border: 2vw solid midnightBlue;
+  display: flex;
+  min-height: 20vh;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: space-around;
+}
+
+.ButtonContainer button {
+  padding: 10vh 10vw;
+  margin: 1vw;
+  border-radius: .6em;  
+}
+
+#rock {  
+  background-image: url("rock.png");
+  background-size: 100% 100%;
+}
+#paper {
+  background-image: url("paper.png");
+  background-size: 100% 100%;
+}
+#scissors {
+  background-image: url("scissors.png");
+  background-size: 100% 100%;
 }
